# python-cli-skeleton-app

./: .flake8  LICENSE  Makefile  README.md  app_config.ini  pyproject.toml
.github/: issue_template.md  pull_request_template.md
python_cli_skeleton_app/: __main__.py  app_config.py  app_logger.py  endpoint_caller.py
tests/smoke/: test_smoke_python_cli_skeleton_app.py
tests/unit/: test_app_config.py  test_endpoint_caller.py
