[tool.poetry]
name = "python-cli-skeleton-app"
version = "0.1.0"
description = "Skeleton app demonstrating how a Python CLI app can be structured"
authors = ["Dogan Narinc <hoptek@protonmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "python_cli_skeleton_app"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
responses = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
